# LSDA

./: .gitignore  README.md  lsda.ps1  pyproject.toml  requirements.txt  subject.md
src/lsda/: __init__.py  __main__.py  benchmark.py  cli.py  config.py  data.py  eda.py  evaluate.py
src/lsda/models/: __init__.py  sklearn_models.py  spark_models.py
src/lsda/pipelines/: __init__.py  sklearn_pipe.py  spark_pipe.py
