[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsda"
version = "0.1.0"
description = "Large-Scale Data Analysis: Higgs Boson Classification Benchmark (SciKit-Learn vs PySpark)"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pyspark>=3.5",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "joblib>=1.3",
    "optuna>=3.5",
    "tabulate>=0.9",
]

[project.scripts]
lsda = "lsda.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
